[tool.poetry]
name = "price-scraper"
version = "0.1.0"
description = ""
authors = ["chado13 <geaya13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
